--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="hero">
       <img src="./assets/hero.jpg" alt="Hero Image" />
     </div>
-    <h1>Peth Pimarthan</h1>
+    <h1>Peth Pimarthan Peth Pimarthan Peth Pimarthan Peth Pimarthan</h1>
     <!-- Main Section with Cards -->
     <div class="main">
       <div class="aside">
