--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div class="hero">
       <img src="./assets/hero.jpg" alt="Hero Image" />
     </div>
-    <h1>Peth Pimarthan Peth Pimarthan Peth Pimarthan Peth Pimarthan</h1>
+    <h1 style="text-align: center;">Peth Pimarthan</h1>
     <!-- Main Section with Cards -->
     <div class="main">
       <div class="aside">
-        <h1>This is sidebar</h1>
+        <h1 style="text-align: center;">This is sidebar</h1>
         <img src="./assets/sidebar.jpg" alt="Card 1 Image" />
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
